# universal-email-mcp-server

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.development.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: run-tests.yml
src/universal_email_mcp/: __init__.py  auth.py  cli.py  client.py  config.py  http_main.py  models.py  security.py  server.py  stdio_main.py
src/universal_email_mcp/tools/: account.py  mail.py
tests/: test_account_tools.py  test_mail_tools.py
