[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "universal-email-mcp"
version = "0.1.0"
description = "Universal Email MCP Server - Connect to any IMAP/SMTP email provider"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "universal_email_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.2.0"
pydantic = ">=2.8.2"
starlette = "^0.39.0"
uvicorn = "^0.32.0"
aioimaplib = ">=2.0.1"
aiosmtplib = ">=4.0.0"
pydantic-settings = {extras = ["toml"], version = ">=2.8.0"}
tomli-w = ">=1.2.0"
tomli = ">=2.0.0"
cryptography = ">=42.0.0"
keyring = ">=25.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
universal-email-mcp = "universal_email_mcp.stdio_main:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]